--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,11 @@
-# Build and Release Folders
-bin-debug/
-bin-release/
-[Oo]bj/
-[Bb]in/
+# temporary system files
+*.swp
+.DS_Store
 
-# Other files and folders
-.settings/
+# Python cache
+__pycache__/
 
-# Executables
-*.swf
-*.air
-*.ipa
-*.apk
-
-# Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
-# should NOT be excluded as they contain compiler settings and other important
-# information for Eclipse / Flash Builder.
+# compilation/binary files
+*.o
+*.exe
+*.out 
